# knowledge

./: .env.example  .gitignore  CLAUDE.md  CODEBUDDY.md  INCREMENTAL_PLAN.md  README.md  TODO.md  WIKI_ARCHITECTURE.md  batch_convert.py  build_wiki.py  graph_builder.py  graph_viz.py  pyproject.toml  run_kb.ps1  run_pipeline.py  table_analyzer.py  wiki_extractor.py
kb_builder/: __init__.py  batch_convert.py  build_wiki.py  cli.py  config.py  graph_builder.py  graph_viz.py  table_analyzer.py  wiki_extractor.py
old/: _build_log.txt  _peek.py  _run_init.py  build_index.py  eval_wiki.py  init.py  wiki_compiler.py
processed/tools/: build_cn_en_map.py
processed/wiki_specs/: table_schema.md
references/scripts/configs/: table_registry.json
scripts/: __init__.py  __main__.py  build_wiki.py  config.py  doc_reader.py
scripts/convert/: __init__.py  __main__.py  batch_convert.py
scripts/extract/: __init__.py  __main__.py  table_analyzer.py  wiki_extractor.py
scripts/graph/: __init__.py  __main__.py  graph_builder.py  graph_viz.py
scripts/tables/: __init__.py  __main__.py
scripts/viz/: __init__.py  __main__.py
tools/: build_cn_en_map.py
wiki_specs/: activity_template.md  combat_framework.md  numerical_convention.md  system_rule.md
